syntax = "proto3";

package com.londonsmartcity.transport;

option java_multiple_files = true;
option java_package = "com.londonsmartcity.transport";
option java_outer_classname = "TransportServiceProto";

// Public Transport Service
service TransportService {
  // Get real-time bus/tube arrival information
  rpc GetArrivalInfo (ArrivalInfoRequest) returns (ArrivalInfoResponse) {}
  
  // Get service status for all lines
  rpc GetServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
  
  // Report service disruption
  rpc ReportDisruption (DisruptionReport) returns (DisruptionResponse) {}
  
  // Stream real-time vehicle locations
  rpc StreamVehicleLocations (VehicleLocationRequest) returns (stream VehicleLocation) {}
}

message ArrivalInfoRequest {
  string stop_id = 1;
  string line_id = 2;
}

message ArrivalInfoResponse {
  string stop_id = 1;
  string line_id = 2;
  repeated ArrivalInfo arrivals = 3;
}

message ArrivalInfo {
  string vehicle_id = 1;
  int32 minutes_until_arrival = 2;
  string status = 3;
}

message ServiceStatusRequest {
  string line_id = 1;
  string transport_type = 2;  // "BUS", "TUBE", "TRAIN"
}

message ServiceStatusResponse {
  string line_id = 1;
  string status = 2;
  string message = 3;
  LineStatus line_status = 4;
}

message LineStatus {
  string line_id = 1;
  string status = 2;  // "GOOD_SERVICE", "MINOR_DELAYS", "SEVERE_DELAYS", "PART_SUSPENDED", "SUSPENDED"
  string description = 3;
  int64 last_updated = 4;
}

message DisruptionReport {
  string line_id = 1;
  string description = 2;
  string severity = 3;
}

message DisruptionResponse {
  bool success = 1;
  string message = 2;
}

message VehicleLocationRequest {
  string line_id = 1;
}

message VehicleLocation {
  string vehicle_id = 1;
  string line_id = 2;
  double latitude = 3;
  double longitude = 4;
  int32 speed = 5;
  int64 timestamp = 6;
} 